--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,12 @@ manifest:
   remotes:
     - name: slicemk
       url-base: https://github.com/slicemk
+    - name: luberry
+      url-base: https://github.com/luberry
   projects:
     - name: zmk
-      remote: slicemk
-      revision: v20210704
+      remote: luberry
+      revision: mousekeys
       import: app/west.yml
   self:
     path: config
