media layer goes back to default if any letter key is pressed

--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,7 @@ manifest:
   projects:
     - name: zmk
       remote: luberry
-      revision: slice-mouse-hbsocd
+      revision: slice-mouse
       import: app/west.yml
   self:
     path: config
